--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Hello World!</title>
+<title>zuerigrails</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <style type="text/css" media="screen">
 /* Google Fonts */
@@ -47,7 +47,7 @@ h1 {
 <body>
 <div class="main">
 <h1>Hello World!</h1>
-<p>This is my first Handshake site!</p>
+<p>schnäppchen für euch Füchse da draussn</p>
 </div>
 </body>
 </html>
