--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ html {
 	height: 100%;
 	width: 100%;
 	background: rgba(255,0,0,1);
-	background-image: url(./hello-world.jpg);
+	background-image: url(./WhatsApp Image 2020-04-01 at 15.38.00.jpeg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
